mylang/tests/success/3.pas
program
var b: bool;
begin

case(1 < 2) of
    true: begin
        writeln(99)
    end
    false: begin
        writeln(55)
    end
end

end@

