mylang/tests/fail/f6.pas
program

begin
    writeln(less(1,2))
end@


